fix: the Footer layout issue

--- a/apps/vth-frontend/src/styles/globals.css
+++ b/apps/vth-frontend/src/styles/globals.css
@@ -201,3 +201,12 @@ a {
   margin-block-end: 0;
   margin-block-start: 0;
 }
+
+footer.utrecht-footer {
+  display: block;
+}
+
+.utrecht-page.utrecht-footer__container {
+  padding-inline-end: 0;
+  padding-inline-start: 0;
+}
